[package]
name = "sdwd"
version = "1.0.0"
authors = ["Victor Polevoy <maintainer@vpolevoy.com>"]
description = "SystemD WatchDog utility crate"
readme = "README.md"
license = "MIT"
keywords = ["systemd", "watchdog", "timer"]
repository = "https://github.com/vityafx/sdwd"
documentation = "https://docs.rs/sdwd"

[dependencies]
systemd = "0.4"
log = "0.4"

[badges]
travis-ci = { repository = "vityafx/sdwd" }